Comunicação Servidor -> Multi Client Fixed